--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     <!-- <div class="branch">
       <div class="commit"></div>
     </div> -->
-    <script src="renderer.js"></script>
+    <script src="renderer.ts"></script>
   </body>
 </html>
