use canvas to render branches and commits
Signed-off-by: gfmota <gabrielfmota134@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,9 @@
         <div id="actions"></div>
       </header>
       <div id="content">
-        <div id="sidebar"></div>
-        <div id="main">
-          <div id="branches-container"></div>
-        </div>
+        <canvas></canvas>
       </div>
     </div>
-    <script src="renderer.ts"></script>
+    <script src="renderer.js"></script>
   </body>
 </html>
