Add messages style and examples
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,19 @@
         <div id="actions"></div>
       </header>
       <div id="content">
-        <canvas></canvas>
+        <div id="sidebar"></div>
+        <div id="main">
+          <div id="graph">
+            <canvas></canvas>
+          </div>
+          <div id="messages">
+            <ul>
+              <li>Message 1</li>
+              <li>Message 2</li>
+              <li>Message 3</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <script src="renderer.js"></script>
