Remove wrap div of unordered list of messages
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,11 @@
           <div id="graph">
             <canvas></canvas>
           </div>
-          <div id="messages">
-            <ul>
-              <li>Message 1</li>
-              <li>Message 2</li>
-              <li>Message 3</li>
-            </ul>
-          </div>
+          <ul id="messages">
+            <li>Message 1</li>
+            <li>Message 2</li>
+            <li>Message 3</li>
+          </ul>
         </div>
       </div>
     </div>
