Update messages to load dynamically into DOM
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,7 @@
           <div id="graph">
             <canvas></canvas>
           </div>
-          <ul id="messages">
-            <li>Message 1</li>
-            <li>Message 2</li>
-            <li>Message 3</li>
-          </ul>
+          <ul id="messages"></ul>
         </div>
       </div>
     </div>
