add push button and some styles for it

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
     <div id="app-container">
       <header id="header">
         <div id="navigation"></div>
-        <div id="actions"></div>
+        <div id="actions">
+          <button id="pushButton">
+            <span>Push</span>
+          </button>
+        </div>
       </header>
       <div id="content">
         <div id="sidebar"></div>
