--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,29 @@
       <header id="header">
         <div id="navigation"></div>
         <div id="actions">
-          <button id="pushButton">
-            <span>Push</span>
+          <button id="undoButton" class="button">
+            <span>undo</span>
+          </button>
+          <button id="redoButton" class="button">
+            <span>redo</span>
+          </button>
+          <button id="mergeButton" class="button">
+            <span>merge</span>
+          </button>
+          <button id="pullButton" class="button">
+            <span>pull</span>
+          </button>
+          <button id="pushButton" class="button">
+            <span>push</span>
+          </button>
+          <button id="branchButton" class="button">
+            <span>branch</span>
+          </button>
+          <button id="stashButton" class="button">
+            <span>stash</span>
+          </button>
+          <button id="popButton" class="button">
+            <span>pop</span>
           </button>
         </div>
       </header>
