--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
         </div>
       </div>
     </div>
+    <script src="buttonHandler.js"></script>
     <script src="renderer.js"></script>
   </body>
 </html>
