fixing position of buttons and adding devtools

--- a/src/index.html
+++ b/src/index.html
@@ -15,30 +15,32 @@
       <header id="header">
         <div id="navigation"></div>
         <div id="actions">
-          <button id="undoButton" class="button">
-            <span>undo</span>
-          </button>
-          <button id="redoButton" class="button">
-            <span>redo</span>
-          </button>
-          <button id="mergeButton" class="button">
-            <span>merge</span>
-          </button>
-          <button id="pullButton" class="button">
-            <span>pull</span>
-          </button>
-          <button id="pushButton" class="button">
-            <span>push</span>
-          </button>
-          <button id="branchButton" class="button">
-            <span>branch</span>
-          </button>
-          <button id="stashButton" class="button">
-            <span>stash</span>
-          </button>
-          <button id="popButton" class="button">
-            <span>pop</span>
-          </button>
+          <div id="buttons">
+            <button id="undoButton" class="button">
+              <span>undo</span>
+            </button>
+            <button id="redoButton" class="button">
+              <span>redo</span>
+            </button>
+            <button id="mergeButton" class="button">
+              <span>merge</span>
+            </button>
+            <button id="pullButton" class="button">
+              <span>pull</span>
+            </button>
+            <button id="pushButton" class="button">
+              <span>push</span>
+            </button>
+            <button id="branchButton" class="button">
+              <span>branch</span>
+            </button>
+            <button id="stashButton" class="button">
+              <span>stash</span>
+            </button>
+            <button id="popButton" class="button">
+              <span>pop</span>
+            </button>
+          </div>
         </div>
       </header>
       <div id="content">
