adding test to buttons actions

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <script src="buttonHandler.js"></script>
+    <script src="actionsController.js"></script>
     <script src="renderer.js"></script>
   </body>
 </html>
