Show changed files in sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,18 @@
               <ul class="checklist" id="localList"></ul>
             </div>
           </div>
+          <div class="dropdown">
+            <div class="header opened">
+              <div class="name">
+                <span class="icon"><img src="assets/local-icon.svg" /></span>
+                Changed Files
+              </div>
+              <div id="changedCount"></div>
+            </div>
+            <div class="items opened">
+              <ul class="checklist" id="changedList"></ul>
+            </div>
+          </div>
         </div>
         <div id="main">
           <div id="graph">
