--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello World!</title>
+    <title>Git Interfácil</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
