--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
       <header id="header">
         <div id="navigation"></div>
         <div id="actions">
+          <!-- <input type="file" webkitdirectory id="dirs" /> -->
+          <input
+            id="repoSelector"
+            type="file"
+            webkitdirectory
+            directory
+            multiple
+          />
           <div id="buttons">
             <button id="undoButton" class="button">
               <span>undo</span>
@@ -83,6 +91,13 @@
           </div>
           <ul id="messages"></ul>
           <div id="toast-container"></div>
+          <div id="repoSelectorLoading">
+            <div class="loading">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
