--- a/src/screens/Home/home.html
+++ b/src/screens/Home/home.html
@@ -29,7 +29,7 @@
             <span class="icon"
               ><img id="shortcuts" src="../../assets/shortcuts-icon.svg"
             /></span>
-            <span class="title">SHORTCURS</span>
+            <span class="title">SHORTCUTS</span>
           </button>
           <button>
             <span class="icon"
@@ -39,24 +39,7 @@
           </button>
         </div>
 
-        <div id="main">
-          <span class="title"> Workspaces </span>
-          <div id="actionsBar">
-            <button id="newWorkspaceButton">
-              <span> NEW WORKSPACE </span>
-            </button>
-          </div>
-          <div class="descriptionBar">
-            <div class="vertical-line"></div>
-            <span class="icon">
-              <img src="../../assets/favorite-icon.svg" />
-            </span>
-            <div class="vertical-line"></div>
-            <span>NAME</span>
-            <div class="vertical-line"></div>
-            <span>MODIFIED</span>
-          </div>
-        </div>
+        <div id="main"></div>
       </div>
     </div>
     <script src="renderer.js"></script>
