adding mocked shortcuts page

--- a/src/screens/Home/Tabs/shortcuts.html
+++ b/src/screens/Home/Tabs/shortcuts.html
@@ -4,20 +4,19 @@
     <span> CREATE NEW </span>
   </button>
 </div>
+<div class="descriptionBar">
+  <div class="vertical-line"></div>
+  <span class="icon">Edit</span>
+  <div class="vertical-line"></div>
+  <span>Command</span>
+  <div class="vertical-line"></div>
+  <span>Keybinding</span>
+  <div class="vertical-line"></div>
+</div>
 <table class="contentTable">
-  <tr class="titleCell">
-    <th>Edit</th>
-    <th>Command</th>
-    <th>Keybinding</th>
-  </tr>
-  <tr class="items">
-    <td>FIRST</td>
-    <td>FIRST</td>
-    <td>FIRST</td>
-  </tr>
-  <tr class="items">
-    <td>SECOND</td>
-    <td>SECOND</td>
-    <td>SECOND</td>
+  <tr>
+    <td><img src="../../assets/edit-icon.svg" /></td>
+    <td>Increase Text Size</td>
+    <td><span class="keybind">Ctrl +</span></td>
   </tr>
 </table>
