--- a/src/screens/Home/Tabs/workspaces.html
+++ b/src/screens/Home/Tabs/workspaces.html
@@ -15,3 +15,10 @@
   <span>MODIFIED</span>
   <div class="vertical-line"></div>
 </div>
+<table class="contentTable">
+  <tr>
+    <td><img src="../../assets/edit-icon.svg" /></td>
+    <td>Increase Text Size</td>
+    <td class="keybinding">Ctrl + +</td>
+  </tr>
+</table>
