feat: add dir selector button styled
Signed-off-by: gfmota <gabrielfmota134@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
         <div id="navigation"></div>
         <div id="actions">
           <!-- <input type="file" webkitdirectory id="dirs" /> -->
+          <button
+            id="repoSelectorButton"
+            onclick="getElementById('repoSelector').click()"
+          >
+            <img src="assets/pasta-menos.svg" width="24px" height="24px" />
+            <span>Choose repository dir</span>
+          </button>
           <input
             id="repoSelector"
             type="file"
