fixing css in create new shortcut

--- a/src/screens/Home/Tabs/shortcuts.html
+++ b/src/screens/Home/Tabs/shortcuts.html
@@ -13,9 +13,9 @@
   <span>Keybinding</span>
   <div class="vertical-line"></div>
 </div>
-<table class="contentTable">
+<table class="contentTable" id="shortcutsTable">
   <tr>
-    <td><img src="../../assets/edit-icon.svg" /></td>
+    <td class="edit"><img src="../../assets/edit-icon.svg" /></td>
     <td>Increase Text Size</td>
     <td><span class="keybind">Ctrl +</span></td>
   </tr>
