--- a/src/screens/Home/Tabs/workspaces.html
+++ b/src/screens/Home/Tabs/workspaces.html
@@ -17,8 +17,11 @@
 </div>
 <table class="contentTable">
   <tr>
-    <td><img src="../../assets/edit-icon.svg" /></td>
-    <td>Increase Text Size</td>
-    <td class="keybinding">Ctrl + +</td>
+    <td><img src="../../assets/favorite-icon.svg" /></td>
+    <td>
+      <span class="bold">eng-software</span
+      ><span class="diretory">diretorio</span>
+    </td>
+    <td class="bold">2 hours ago</td>
   </tr>
 </table>
