fixing editing keybind

--- a/src/screens/Home/Tabs/shortcuts.html
+++ b/src/screens/Home/Tabs/shortcuts.html
@@ -17,6 +17,9 @@
   <tr>
     <td class="edit"><img src="../../assets/edit-icon.svg" /></td>
     <td>Increase Text Size</td>
-    <td><span class="keybind">Ctrl +</span></td>
+    <td class="keybind-container">
+      <input type="text" disabled="true" />
+      <span class="keybind"><span>Ctrl</span> +<span>+</span></span>
+    </td>
   </tr>
 </table>
