--- a/src/screens/Home/home.html
+++ b/src/screens/Home/home.html
@@ -9,6 +9,8 @@
     />
     <title>Git Interfácil</title>
     <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="./Tabs/workspacesStyles.css" />
+    <link rel="stylesheet" href="./Tabs/helpStyles.css" />
     <!-- <link rel="stylesheet" href="components/Toast/toast.css" /> -->
   </head>
   <body>
