--- a/src/screens/Home/home.html
+++ b/src/screens/Home/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="home.css" />
     <link rel="stylesheet" href="./Tabs/workspacesStyles.css" />
     <link rel="stylesheet" href="./Tabs/helpStyles.css" />
-    <!-- <link rel="stylesheet" href="components/Toast/toast.css" /> -->
+    <link rel="stylesheet" href="../../components/Toast/toast.css" />
   </head>
   <body>
     <div id="app-container">
