adding shortcuts json and design fixes

--- a/src/screens/Home/Tabs/shortcuts.html
+++ b/src/screens/Home/Tabs/shortcuts.html
@@ -1,10 +1,10 @@
 <span class="title"> Shortcuts </span>
 <div id="actionsBar">
   <button id="newButton">
-    <span> CREATE NEW </span>
+    <span> SEARCH </span>
   </button>
 </div>
-<div class="descriptionBar">
+<div class="descriptionBar" id="descriptionShortcuts">
   <div class="vertical-line"></div>
   <span class="icon">Edit</span>
   <div class="vertical-line"></div>
@@ -13,13 +13,4 @@
   <span>Keybinding</span>
   <div class="vertical-line"></div>
 </div>
-<table class="contentTable" id="shortcutsTable">
-  <tr>
-    <td class="edit"><img src="../../assets/edit-icon.svg" /></td>
-    <td>Increase Text Size</td>
-    <td class="keybind-container">
-      <input type="text" disabled="true" />
-      <span class="keybind"><span>Ctrl</span> +<span>+</span></span>
-    </td>
-  </tr>
-</table>
+<table class="contentTable" id="shortcutsTable"></table>
