adding search shortcuts searchbar, add and commit button img and shortcuts just when window focused

--- a/src/screens/Home/Tabs/shortcuts.html
+++ b/src/screens/Home/Tabs/shortcuts.html
@@ -1,8 +1,8 @@
 <span class="title"> Shortcuts </span>
 <div id="actionsBar">
-  <button id="newButton">
-    <span> SEARCH </span>
-  </button>
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Search shortcuts..." />
+  </div>
 </div>
 <div class="descriptionBar" id="descriptionShortcuts">
   <div class="vertical-line"></div>
