--- a/src/screens/Home/Tabs/workspaces.html
+++ b/src/screens/Home/Tabs/workspaces.html
@@ -22,22 +22,7 @@
       <img src="../../assets/favorite-icon.svg" />
     </td>
     <td class="directory">
-      <span class="bold">eng-software</span>
-      <span>diretori/dasda/fsadsada/sadsada/dsadsad/eng-software</span>
-    </td>
-    <td class="timestamp" data-last-clicked="November 20, 2023 12:00:00">
-      <span class="lastUpdatedTime"></span>
-    </td>
-    <td class="delete" data-tooltip="Delete workspace">
-      <img src="../../assets/delete-icon.svg" />
-    </td>
-  </tr>
-  <tr>
-    <td class="not-favorite" data-tooltip="Add to favorites">
-      <img src="../../assets/favorite-icon.svg" />
-    </td>
-    <td class="directory">
-      <span class="bold">eng-software</span>
+      <span class="bold">mock test</span>
       <span>diretori/dasda/fsadsada/sadsada/dsadsad/eng-software</span>
     </td>
     <td class="timestamp" data-last-clicked="November 20, 2023 12:00:00">
