--- a/src/screens/Home/home.html
+++ b/src/screens/Home/home.html
@@ -9,9 +9,9 @@
     />
     <title>Git Interfácil</title>
     <link rel="stylesheet" href="home.css" />
-    <link rel="stylesheet" href="./Tabs/workspacesStyles.css" />
-    <link rel="stylesheet" href="./Tabs/helpStyles.css" />
-    <link rel="stylesheet" href="./Tabs/shortcutsStyles.css" />
+    <link rel="stylesheet" href="./Tabs/Workspaces/workspacesStyles.css" />
+    <link rel="stylesheet" href="./Tabs/Help/helpStyles.css" />
+    <link rel="stylesheet" href="./Tabs/Shortcuts/shortcutsStyles.css" />
     <link rel="stylesheet" href="../../components/Toast/toast.css" />
   </head>
   <body>
