--- a/src/screens/Home/Tabs/workspaces.html
+++ b/src/screens/Home/Tabs/workspaces.html
@@ -8,7 +8,7 @@
 <div class="descriptionBar">
   <div class="vertical-line"></div>
   <span class="icon">
-    <img src="../../assets/favorite-icon.svg" />
+    <img src="../assets/favorite-icon.svg" />
   </span>
   <div class="vertical-line"></div>
   <span class="name">Name</span>
@@ -19,7 +19,7 @@
 <table class="contentTable" id="workspacesTable">
   <tr>
     <td class="favorite" data-tooltip="Remove from favorites">
-      <img src="../../assets/favorite-icon.svg" />
+      <img src="../assets/favorite-icon.svg" />
     </td>
     <td class="directory">
       <span class="bold">mock test</span>
@@ -29,7 +29,7 @@
       <span class="lastUpdatedTime"></span>
     </td>
     <td class="delete" data-tooltip="Delete workspace">
-      <img src="../../assets/delete-icon.svg" />
+      <img src="../assets/delete-icon.svg" />
     </td>
   </tr>
 </table>
