--- a/src/TabsSystem/index.html
+++ b/src/TabsSystem/index.html
@@ -33,6 +33,7 @@
       </div>
       <div id="tabcontent"></div>
     </div>
+    <script src="./tabsSystem.js"></script>
     <script src="./tabsSystemController.js"></script>
   </body>
 </html>
