fixing changing tabs in homepage to store state

--- a/src/screens/Home/index.html
+++ b/src/screens/Home/index.html
@@ -21,5 +21,9 @@
     </button>
   </div>
 
-  <div id="main"></div>
+  <div id="main">
+    <div class="pageContent" id="workspacesPage"></div>
+    <div class="pageContent" id="shortcutsPage"></div>
+    <div class="pageContent" id="helpPage"></div>
+  </div>
 </div>
