Modularize RendererListeners class to manage interactivity
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/src/screens/Repository/index.html
+++ b/src/screens/Repository/index.html
@@ -10,34 +10,34 @@
     </button>
     <input id="repoSelector" type="file" webkitdirectory directory multiple />
     <div id="buttons">
-      <button id="undoButton" class="button">
+      <button id="undoButton" class="button" data-action="undo">
         <span>undo</span>
       </button>
-      <button id="redoButton" class="button">
+      <button id="redoButton" class="button" data-action="redo">
         <span>redo</span>
       </button>
-      <button id="mergeButton" class="button">
+      <button id="mergeButton" class="button" data-action="merge">
         <span>merge</span>
       </button>
-      <button id="pullButton" class="button">
+      <button id="pullButton" class="button" data-action="pull">
         <span>pull</span>
       </button>
-      <button id="pushButton" class="button">
+      <button id="pushButton" class="button" data-action="push">
         <span>push</span>
       </button>
-      <button id="branchButton" class="button">
+      <button id="branchButton" class="button" data-action="branch">
         <span>branch</span>
       </button>
-      <button id="stashButton" class="button">
+      <button id="stashButton" class="button" data-action="stash">
         <span>stash</span>
       </button>
-      <button id="popButton" class="button">
+      <button id="popButton" class="button" data-action="pop">
         <span>pop</span>
       </button>
-      <button id="addButton" class="button">
+      <button id="addButton" class="button" data-action="add">
         <span>add</span>
       </button>
-      <button id="commitButton" class="button">
+      <button id="commitButton" class="button" data-action="commit">
         <span>commit</span>
       </button>
     </div>
