comment mocking features, changing faq content and adding toast to some actions

--- a/src/screens/Home/Tabs/help.html
+++ b/src/screens/Home/Tabs/help.html
@@ -1,12 +1,25 @@
-<span class="title"> Frequently Asked Questions </span>
+<span class="title">Frequently Asked Questions</span>
 
 <dl class="faq-section">
-  <dt class="question">Q: What is this website about?</dt>
-  <dd class="answer">A: This website provides information about...</dd>
+  <dt class="question">Q: Why isn't my folder showing up after I select it?</dt>
+  <dd class="answer">A: You must select a folder that is a git repository.</dd>
 
-  <dt class="question">Q: How can I get started?</dt>
-  <dd class="answer">A: To get started...</dd>
+  <dt class="question">Q: What actions can I perform in this program?</dt>
+  <dd class="answer">
+    A: In this release, you can commit, push, stash, pop, and pull.
+  </dd>
 
-  <dt class="question">Q: Can I modify my account settings?</dt>
-  <dd class="answer">A: Yes, you can modify your account settings by...</dd>
+  <dt class="question">Q: Where's the add button?</dt>
+  <dd class="answer">
+    A: When you select the files and press commit, it automatically adds these
+    files and commits them.
+  </dd>
+
+  <dt class="question">
+    Q: How can I confirm if the actions worked without checking in the terminal?
+  </dt>
+  <dd class="answer">
+    A: Every time you perform an action, a toast notification appears on the
+    screen.
+  </dd>
 </dl>
