--- a/src/screens/Repository/index.html
+++ b/src/screens/Repository/index.html
@@ -10,15 +10,15 @@
     </button>
     <input id="repoSelector" type="file" webkitdirectory directory multiple />
     <div id="buttons">
-      <button id="undoButton" class="button" data-action="undo">
+      <!--       <button id="undoButton" class="button" data-action="undo">
         <span>undo</span>
       </button>
       <button id="redoButton" class="button" data-action="redo">
         <span>redo</span>
-      </button>
-      <button id="mergeButton" class="button" data-action="merge">
+      </button> -->
+      <!--  <button id="mergeButton" class="button" data-action="merge">
         <span>merge</span>
-      </button>
+      </button> -->
       <button id="pullButton" class="button" data-action="pull">
         <span>pull</span>
       </button>
@@ -34,9 +34,9 @@
       <button id="popButton" class="button" data-action="pop">
         <span>pop</span>
       </button>
-      <button id="addButton" class="button" data-action="add">
+      <!--       <button id="addButton" class="button" data-action="add">
         <span>add</span>
-      </button>
+      </button> -->
       <button id="commitButton" class="button" data-action="commit">
         <span>commit</span>
       </button>
